@@ -1,7 +1,7 @@
 #  File src/library/base/R/locales.R
 #  Part of the R package, https://www.R-project.org
 #
-#  Copyright (C) 1995-2012 The R Core Team
+#  Copyright (C) 1995-2021 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -16,20 +16,21 @@
 #  A copy of the GNU General Public License is available at
 #  https://www.R-project.org/Licenses/
 
+.LC.categories <- c("LC_ALL",      "LC_COLLATE", "LC_CTYPE",
+                    "LC_MONETARY", "LC_NUMERIC", "LC_TIME",
+                    if(.Platform$OS.type == "unix")
+                        c("LC_MESSAGES", "LC_PAPER", "LC_MEASUREMENT"))
+
 Sys.getlocale <- function(category = "LC_ALL")
 {
-    category <- match(category, c("LC_ALL", "LC_COLLATE", "LC_CTYPE",
-                                  "LC_MONETARY", "LC_NUMERIC", "LC_TIME",
-                                  "LC_MESSAGES", "LC_PAPER", "LC_MEASUREMENT"))
+    category <- match(category, .LC.categories)
     if(is.na(category)) stop("invalid 'category' argument")
     .Internal(Sys.getlocale(category))
 }
 
 Sys.setlocale <- function(category = "LC_ALL", locale = "")
 {
-    category <- match(category, c("LC_ALL", "LC_COLLATE", "LC_CTYPE",
-                                  "LC_MONETARY", "LC_NUMERIC", "LC_TIME",
-                                  "LC_MESSAGES", "LC_PAPER", "LC_MEASUREMENT"))
+    category <- match(category, .LC.categories)
     if(is.na(category)) stop("invalid 'category' argument")
     .Internal(Sys.setlocale(category, locale))
 }
